Changes from jTDS 0.8.1
=========================

08/06/2004 - David Kilzer
 o De-uglified the Driver.getPropertyInfo() method.  The code reads much
   cleaner now.
 o Revised insert/update/delete-new-property mini-howto in DefaultProperties.

08/06/2004 - Brian Heineman
 o Update the usage of the prepareSql parameter.  This parameter is now used to
   determine how prepared statements are sent to the server.  Options include:
     0 - SQL is sent to the server each time without any preparation
     1 - Temporary stored procedures are created for each unique SQL statement
         and parameter combination
     2 - sp_executesql is used
     3 - sp_prepare is used in conjunction with sp_execute
     4 (not implemented) - sp_prepexec is used in conjunction with sp_execute
   Update the FAQ to include this new information.
 o Corrected bug with sp_prepare/sp_execute logic where statements without
   parameters were being sent as raw SQL even though the SQL was prepared with
   sp_prepare.

08/05/2004 - David Kilzer
 o Added missing javadoc to DriverUnitTest methods.
 o Renamed Messages.defaultResource to Messages.DEFAULT_RESOURCE to reflect its
   use.
 o Refactored Driver.getPropertyInfo() so that properties are not hard-coded.
   Added Messages.loadDriverProperties() method.  Wrote additional unit tests
   for Driver.getPropertyInfo() in DriverUnitTest.  Added more utility methods
   to UnitTestBase.

08/05/2004 - Brian Heineman
 o Applied Mike Hutchinson's patch for [996631] Refactoring and some performance
   optimization.
 o Removed extraneous import statements.
 o Added check in data conversion for LOB values with a length greater than
   2,147,483,647.
 o Added "and Sybase" to JtdsDatabaseMetaData.getDriverName().

08/04/2004 - Brian Heineman
 o Applied patch in bug [1003507] Cursor result set close error;
   (thanks to Mike Hutchinson for report and the fix).
 o Removed assertEquals(double,double) to avoid Eclipse execution failures.
